hotfix: removed overflow-y:visible from sod select, fixed extra arrows from appearing on windows

--- a/wp-content/themes/ameris-bank/sass/components/forms/_fields.scss
+++ b/wp-content/themes/ameris-bank/sass/components/forms/_fields.scss
@@ -7,9 +7,9 @@ input, textarea {
 
 }
 
-.sod_select .sod_label {
+/* .sod_select .sod_label {
 	overflow-y: visible;
-}
+} */
 
 .sod_select .sod_list_wrapper {
 	background: $paleblue;
